Updating README for 01 setup with correct placeholders and names.